--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form method="get" action="index.html">
+    <form id="search-form" method="get" action="index.html">
         <input type="text" name="search" value="">
         <button type="submit">Send</button>
     </form>
