updated code structure to use class instead

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <title>Api-Mashup</title>
     
 </head>
-<body>
-    <form id="search-form" method="get" action="index.html">
-    <!-- <section class="search"> -->
-        <input type="text"  name="search" placeholder="Search for images…" aria-placeholder="Search for images…">
+<body id="mashed">
+    <!-- <form id="search-form" method="get" action="index.html"> -->
+    <section class="search">
+        <input type="text"  value="" placeholder="Search for images…" aria-placeholder="Search for images…">
         <button type="submit">Search</button>
-    <!-- </section> -->
-    </form>
+    </section>
+    <!-- </form> -->
     
 
     <div class="results">
