--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="search">
-            <input type="text"  value="" placeholder="Search for images…" aria-placeholder="Search for images…">
+            <input id="search-input" type="text"  value="" placeholder="Search for images…" aria-placeholder="Search for images…">
             <button type="submit">Search</button>
         </section>
     
