add loader, cleaned up showphotos method

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
         <div id="error"></div>
         <section class="main-content">
             <div class="results">
+                <div class="loader"></div>
                 <div class="container">
                     <div class="column">
                         <div class="item1"></div>
